--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
   "compilerOptions": {
-    "allowNonTsExtensions": true,
-    "isolatedModules": true,
-    "noLib": true,
-    "target": "ES5",
+    "target": "es5",
     "module": "commonjs",
-    "noEmitOnError": false,
-    "rootDir": ".",
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": false,
-    "inlineSourceMap": false,
-    "inlineSources": false
+    "experimentalDecorators": true
   },
-  "exclude": [
-    "node_modules"
+  "filesGlob": [
+    "**/*.ts",
+    "!node_modules/**/*"
   ],
-  "compileOnSave": false
+  "exclude": [
+    "node_modules",
+    "typings/global",
+    "typings/global.d.ts"
+  ],
+  "compileOnSave": false,
+  "atom": {
+    "rewriteTsconfig": false
+  }
 }
